# zhiyanzhaijie.space

./: .dockerignore  .gitignore  Cargo.toml  DESIGN.md  Dioxus.prod.toml  Dioxus.toml  Dockerfile  README.md  compose.yml  tailwind.config.ts  tailwind.css  theme.css
.cargo/: config.toml
.github/workflows/: deploy.yml
assets/: font.css  markdown.css  tailwind.css  theme.css
content/: tags.yml
content/about/: about_cn.md  about_en.md
content/posts/dioxus_antfu/: en.md  meta.yml
content/posts/dioxus_site-exp/: cn.md  en.md  meta.yml
content/posts/matrix_geometric_intuition/: cn.md  en.md  meta.yml
content/posts/transformer_as_translator/: cn.md  en.md  meta.yml
docs/: todo.md
src/: bird.txt  main.rs  routes.rs
src/IO/: about.rs  blog.rs  mod.rs  user.rs
src/components/: animated_bird.rs  mod.rs
src/components/common/: breadcrumb.rs  layout_cell.rs  locale_switcher.rs  mod.rs  svgs.rs  theme_switcher.rs
src/components/icons/: copy.rs  github.rs  i18n.rs  linkedin.rs  logo.rs  menu.rs  mod.rs  moon.rs  sun.rs  twitter.rs  zyzj.rs
src/components/interactive/: code_runner.rs  color_picker.rs  counter.rs  mermaid.rs  mod.rs  social_link.rs  test.rs
src/components/layout/: mod.rs
src/components/layout/root/: bottom_bar.rs  content.rs  mod.rs  sidebar.rs  toc.rs
src/components/markdown/: hooks.rs  mod.rs  node.rs  registry.rs  renderer.rs
src/components/providers/: interactive_provider.rs  mod.rs  preference_provider.rs
src/components/views/: about.rs  mod.rs  not_found.rs  tags.rs
src/components/views/about/: about_cn.md  about_en.md  mod.rs
src/components/views/blog/: by_tag.rs  list.rs  mod.rs  post.rs
src/components/views/blog/list/: mod.rs
src/components/views/blog/row/: mod.rs
src/components/views/not_found/: mod.rs
src/components/views/tags/: mod.rs
src/i18n/en-US/: index.ftl
src/i18n/zh-CN/: index.ftl
src/impls/: mod.rs
src/impls/about/: mod.rs  service.rs
src/impls/app_runtime/: mod.rs  native.rs  wasm.rs
src/impls/blog/: assets.rs  mod.rs  service.rs  store.rs  types.rs
src/impls/i18n/: mod.rs
src/impls/i18n/locales/: en-US.ftl  zh-CN.ftl
src/impls/session/: consts.rs  mod.rs  preference.rs
src/js/: mermaid_bridge.js  theme_bridge.js  toc_bridge.js
src/md/: exploring-dioxus.md  first-post.md  learning-journey.md  life-reflections.md  rust-adventure.md  tech-deep-dive.md  test.md  test_cn.md  test_en.md
src/models/: post.rs  tag.rs
src/pages/: about.rs  blog_post.rs  home.rs  mod.rs  page_not_found.rs  tags.rs
src/pages/blog/: blog_by_tag.rs  blog_layout.rs  blog_list.rs  mod.rs
src/root/: mod.rs
src/root/layouts/: blog_layout.rs  main_layout.rs  mod.rs  root_layout.rs
src/root/routes/: about.rs  blog_by_tag.rs  blog_list.rs  blog_post.rs  mod.rs  not_found.rs  tags.rs
src/root/routes/blog/: mod.rs
src/root/routes/tags/: mod.rs
src/utils/: markdown_toc.rs  mod.rs  url.rs
(+3 files in other folders)
