[package]
name = "zhiyanzhaijie-space"
version = "0.1.0"
authors = ["zyzj"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = ["router"] }
dioxus-web = { version = "0.6.3", default-features = false }
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "Element",
  "Storage",
  "MediaQueryList",
  "MediaQueryListEvent",
] }

# 添加 log crate
log = "0.4"
# hightlight code block
syntect = { version = "5.2.0", default-features = false, features = [
  "default-fancy",
] }

# (推荐) 添加 console_log 和 console_error_panic_hook 用于 WASM 日志和 panic 处理
console_log = "1.0" # 请使用最新兼容版本

markdown = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
once_cell = "1.19.0"
include_dir = "0.7.3"
getrandom = { version = "0.2", features = ["js"] } # Added to fix wasm build
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["web"]
web = ["dioxus/web"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Updated tokio version to specific 1.36.0 and feature "full"
tokio = { version = "1.36.0", features = ["full"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
