[package]
name = "zhiyanzhaijie-space"
version = "0.1.0"
authors = ["zyzj"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.4", features = ["router", "fullstack"] }
dioxus-i18n = "0.5.1"
dioxus-use-js = "0.4.7"
axum = { version = "0.8.0", optional = true }
axum_session = { version = "0.17", optional = true }
unic-langid = "0.9"
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "Element",
  "Storage",
  "MediaQueryList",
  "MediaQueryListEvent",
  "HtmlElement",
  "Navigator",
  "Clipboard",
] }

# 添加 log crate
log = "0.4"
dioxus-markdown = { git = "https://github.com/rambip/rust-web-markdown", package = "dioxus-markdown" }

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
getrandom = { version = "0.2", features = ["js"] }        # Added to fix wasm build
chrono = { version = "0.4", features = ["serde"] }
gloo-timers = { version = "0.3", features = ["futures"] }
rand = { version = "0.8", features = ["getrandom"] }

[features]
default = ["web"]
web = ["dioxus/web"]
server = ["dioxus/server", "dep:axum", "dep:axum_session"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.36.0", features = ["full"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
